--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,5 +10,121 @@ body {
 	// font-family: 'Poppins', sans-serif;
 	font-family: 'Roboto', sans-serif;	
 }
+// -- common classes --
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.container {
+}
+.section-decription {
+}
+.section-subtitle {
+}
+.section-title {
+}
+.section-txt {
+}
+// -- / common classes --
+// -- header --
+.header--outdoor {
+}
+.container {
+}
+.header--logo {
+}
+.header--menu {
+}
+.menu {
 
+		// .menu__list
 
+		&__list {}
+
+		// .menu__item
+
+		&__item {}
+
+		// .menu__link
+
+		&__link {}
+}
+.header--cart-menu {
+}
+.cart-menu {
+
+		// .cart-menu__purchase-btn
+
+		&__purchase-btn {}
+
+		// .cart-menu__cart-btn
+
+		&__cart-btn {}
+}
+// -- / header --
+// !
+//  -- hero section --
+.outdoor--hero {
+
+	// .outdoor--hero__image
+
+	&__image {}
+
+	// .outdoor--hero__description
+
+	&__description {}
+}
+.description-hero {
+
+	// .description-hero__subtitle
+
+	&__subtitle {}
+
+	// .description-hero__title
+
+	&__title {}
+
+	// .description-hero__txt
+
+	&__txt {}
+}
+.text {
+}
+// -- / hero  --
+// !
+//  -- about us section -- 
+.about-us {
+
+	// .about-us__img
+
+	&__img {}
+
+	// .about-us__description
+
+	&__description {}
+
+	// .about-us__subtitle
+
+	&__subtitle {}
+
+	// .about-us__title
+
+	&__title {}
+
+	// .about-us__txt
+
+	&__txt {}
+
+	// .about-us__read-more-link
+
+	&__read-more-link {}
+}
+//  -- / about us section -- 
