--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,67 +8,93 @@
 // ----- variables --------------------------------
 body {
 	// font-family: 'Poppins', sans-serif;
-	font-family: 'Roboto', sans-serif;	
+	font-family: 'Roboto', sans-serif;
+	background-color: #E5E5E5;
 }
+
 // -- common classes --
+.none {
+	display: none;
+}
+
 .visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
+	position: absolute;
+	white-space: nowrap;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	clip-path: inset(50%);
+	margin: -1px;
 }
-.container {
-}
-.section-decription {
-}
-.section-subtitle {
-}
-.section-title {
-}
-.section-txt {
-}
+
+.container {}
+
+.section-decription {}
+
+.section-subtitle {}
+
+.section-title {}
+
+.section-txt {}
+
 // -- / common classes --
 // -- header --
-.header--outdoor {
-}
-.container {
-}
-.header--logo {
-}
-.header--menu {
-}
+.header--outdoor {}
+
+.container {}
+
+.header--logo {}
+
+.header--menu {}
+
 .menu {
 
-		// .menu__list
+	// .menu__list
 
-		&__list {}
+	&__list {}
 
-		// .menu__item
+	// .menu__item
 
-		&__item {}
+	&__item {}
 
-		// .menu__link
+	// .menu__link
 
-		&__link {}
+	&__link {
+		font-family: 'Poppins';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 13px;
+		line-height: 1.08;
+		color: #444444;
+	}
 }
-.header--cart-menu {
-}
+
+.header--cart-menu {}
+
 .cart-menu {
 
-		// .cart-menu__purchase-btn
+	// .cart-menu__purchase-btn
 
-		&__purchase-btn {}
+	&__purchase-btn {
+		font-family: 'Poppins';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 1.4;
+		/* identical to box height, or 140% */
 
-		// .cart-menu__cart-btn
+		background-color: #575445;
+		color: #FFFFFF;
+	}
 
-		&__cart-btn {}
+	// .cart-menu__cart-btn
+
+	&__cart-btn {}
 }
+
 // -- / header --
 // !
 //  -- hero section --
@@ -82,6 +108,7 @@ body {
 
 	&__description {}
 }
+
 .description-hero {
 
 	// .description-hero__subtitle
@@ -96,8 +123,9 @@ body {
 
 	&__txt {}
 }
-.text {
-}
+
+.text {}
+
 // -- / hero  --
 // !
 //  -- about us section -- 
@@ -127,4 +155,76 @@ body {
 
 	&__read-more-link {}
 }
+
 //  -- / about us section -- 
+// store section 
+
+.image-bg img {
+	width: 100%;
+}
+
+.goods-list {
+
+	// .goods-list__item
+
+	&__item {
+		width: 379px;
+		// todo calculate correct width
+		position: relative;
+	}
+
+	// .goods-list__description
+
+	&__description {
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		position: absolute;
+		top: 40px;
+	}
+
+	// .goods-list__title
+
+	&__title {
+		font-family: 'Roboto';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 28px;
+		line-height: 1.2;
+
+		text-align: center;
+
+		color: #575445;
+	}
+
+	// .goods-list__txt
+
+	&__txt {
+		font-family: 'Poppins';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 16px;
+		line-height: 1.4;
+
+		text-align: center;
+
+		color: #575445;
+
+	}
+
+	// .goods-list__link
+
+	&__link {
+		font-family: 'Poppins';
+		font-style: normal;
+		font-weight: 400;
+		font-size: 15px;
+		line-height: 1.4;
+
+		color: #575445;
+
+	}
+}
+
+// -------
