--- a/css/styles.css
+++ b/css/styles.css
@@ -79,11 +79,12 @@ h1, h2, h3, h4, h5, h6 {
 /* hero */
 /*about us */
 /* shop */
-/* our-products */
+/* our-products  */
 /* mixins definition*/
 /* common classes styles*/
 body {
-  font-family: "Roboto", sans-serif;
+  max-width: 1440px;
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
 }
 
@@ -106,7 +107,7 @@ body {
 }
 
 .wrapper {
-  max-width: 1140px;
+  max-width: 100%;
 }
 
 .container {
@@ -117,6 +118,7 @@ body {
   font-size: 36px;
   line-height: 1.2;
   color: #575445;
+  font-family: "Roboto", sans-serif;
 }
 
 .section-subtitle {
@@ -137,10 +139,35 @@ body {
 .header--outdoor {
   font-family: "Poppins";
   display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 40px;
+  margin: 17px 0;
+}
+
+.header--logo {
+  flex: 0 0 128px;
+  align-self: center;
+}
+
+.header--menu {
+  flex: 1 0 460px;
+  justify-content: end;
+}
+
+.header--cart-menu {
+  flex: 0 0 288px;
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  justify-content: flex-end;
 }
 
 .menu__list {
   display: flex;
+  justify-content: end;
+  -moz-column-gap: 28px;
+       column-gap: 28px;
 }
 .menu__link {
   font-size: 14px;
@@ -148,12 +175,35 @@ body {
   color: #444444;
 }
 
+.cart-menu__cart-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.cart-menu__cart-btn::before {
+  content: "";
+  width: 17px;
+  height: 17px;
+  background-image: url("/images/0header/cart-icon.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.cart-menu__cart-btn::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-image: url("/images/0header/items-in-cart.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 .cart-menu__purchase-btn, .cart-menu__cart-btn {
   font-size: 16px;
   line-height: 1.4;
   color: #ffffff;
   background-color: #575445;
   border-radius: 6px;
+  padding: 10px 18px;
 }
 
 /*styles for hero section*/
@@ -176,8 +226,20 @@ body {
 }
 
 /*styles for our-products section*/
+.our-products {
+  display: flex;
+  flex-wrap: wrap;
+}
 .our-products__decription {
   text-align: center;
+}
+.our-products__title {
+  font-family: "Roboto", sans-serif;
+}
+.products-list {
+  display: grid;
+  grid-template-rows: 1fr, 1fr;
+  grid-template-columns: 1fr, 1fr, 1fr;
 }
 .products-list__item {
   text-align: center;
@@ -186,6 +248,7 @@ body {
   font-size: 20px;
   line-height: 1.2;
   color: #575445;
+  font-family: "Roboto", sans-serif;
 }
 .products-list__txt {
   font-size: 14px;
@@ -198,6 +261,9 @@ body {
   width: 100%;
 }
 
+.store__description {
+  text-align: center;
+}
 .goods-list__item {
   width: 379px;
   position: relative;
