--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ body {
   content: "";
   width: 17px;
   height: 17px;
-  background-image: url("/images/0header/cart-icon.svg");
+  background-image: url("./images/0header/cart-icon.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -193,7 +193,7 @@ body {
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url("/images/0header/items-in-cart.svg");
+  background-image: url("./images/0header/items-in-cart.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
