--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -69,6 +69,7 @@ body {
 	font-family: 'Poppins', sans-serif;
 	// font-family: 'Roboto', sans-serif;
 	font-size: $main-fz;
+	margin: 0 auto;
 }
 .none {
 	display: none;
@@ -88,6 +89,7 @@ body {
 	margin: -1px;
 }
 .wrapper {
+	
 	max-width: 100%;
 }
 .container {
