--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,7 @@ body {
   max-width: 1440px;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
+  margin: 0 auto;
 }
 
 .none {
@@ -185,7 +186,7 @@ body {
   content: "";
   width: 17px;
   height: 17px;
-  background-image: url("./images/0header/cart-icon.svg");
+  background-image: url("/images/header/cart-icon.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -193,7 +194,7 @@ body {
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url("./images/0header/items-in-cart.svg");
+  background-image: url("/images/0header/items-in-cart.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
