--- a/scss/styles/_0header.scss
+++ b/scss/styles/_0header.scss
@@ -57,7 +57,7 @@
 		content: '';
 		width: 17px;
 		height: 17px;
-		background-image: url('./images/0header/cart-icon.svg');
+		background-image: url('/images/header/cart-icon.svg');
 		background-size: contain;
 		background-repeat: no-repeat;
 	}
@@ -66,7 +66,7 @@
 		content: '';
 		width: 20px;
 		height: 20px;
-		background-image: url('./images/0header/items-in-cart.svg');
+		background-image: url('/images/0header/items-in-cart.svg');
 		background-size: contain;
 		background-repeat: no-repeat;
 	}
