--- a/scss/styles/_3our-products.scss
+++ b/scss/styles/_3our-products.scss
@@ -1,12 +1,24 @@
 /*styles for our-products section*/
+.our-products__section-wrapper {
+	background-color: $products-section-background-cl;
+	padding: 100px 0;
+}
+.our-products__cards-wrapper {
+	display: flex;
+	flex-flow: column wrap;
+	align-items: center;
+	row-gap: 20px;
+	
+}
 
 .our-products {
-	display: flex;
-	flex-wrap: wrap;
-	// .our-products__decription
+	position: relative;
 
+
+	// .our-products__decription
 	&__decription {
 		text-align: center;
+		max-width: 600px;
 	}
 
 	// .our-products__subtitle
@@ -21,39 +33,71 @@
 
 	// .our-products__txt
 
-	&__txt {}
+	&__txt {
+		margin-top: 7px;
+	}
 
 	// .our-products__list
 
 	&__list {}
+
+	&__img-bl {
+		position: absolute;
+		bottom: -100px;
+		left: -120px;
+	}
+
+	&__img-tr {
+		position: absolute;
+		top: -100px;
+		right: -120px;
+	}
 }
 
 .products-list {
-	display: grid;
-	grid-template-rows: 1fr, 1fr;
-	grid-template-columns: 1fr, 1fr, 1fr;
+	display: flex;
+	flex-flow: row wrap;
+
 	// .products-list__item
 
 	&__item {
+		flex: 0 1 33.33%;
 		text-align: center;
+		padding: 50px;
 	}
+
+	&__icon-bg {
+		padding: 0;
+		margin: 0 auto;
+		width: 64px;
+		height: 64px;
+		// background-color: $about-us-link-cl;
+		background-image: url('/images/3our-products-section/cards/card-icon-bg.svg');
+		background-size: cover;
+		background-position: center;
+		background-repeat: no-repeat;
+		border-radius: 50%;
+	}
+
 
 	// .products-list__icon
 
-	&__icon {}
+	&__icon {
+		margin-top: 18px;
+	}
 
 	// .products-list__title
 
 	&__title {
+		margin-top: 10px;
 		@include styler($products-list-title-fz, $products-list-title-lh, $products-list-cl);
 		font-family: 'Roboto', sans-serif;
-		// text-align: center;
 	}
 
 	// .products-list__txt
 
 	&__txt {
+		margin-top: 10px;
 		@include styler($products-list-txt-fz, $products-list-txt-lh, $products-list-cl);
-		// text-align: center;
 	}
 }
