--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 /*about us */
 /* shop */
 /* our-products  */
+/* store section */
 /* mixins definition*/
 /* common classes styles*/
 body {
@@ -187,7 +188,7 @@ body {
   content: "";
   width: 17px;
   height: 17px;
-  background-image: url("/images/header/cart.svg");
+  background-image: url("/images/header/cart-icon.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -195,7 +196,7 @@ body {
   content: "";
   width: 20px;
   height: 20px;
-  background-image: url("/images/0header/cart.svg");
+  background-image: url("/images/0header/items-in-cart.svg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -213,7 +214,10 @@ body {
   position: relative;
 }
 .outdoor--hero__image img {
-  max-width: 100%;
+  vertical-align: middle;
+  max-width: 1440px;
+  width: 100vw;
+  min-height: 400px;
 }
 .outdoor--hero__description {
   position: absolute;
@@ -233,6 +237,7 @@ body {
 
 /*styles for about-us section*/
 .about-us {
+  margin: 100px auto;
   display: flex;
   align-items: center;
   justify-content: start;
@@ -241,6 +246,17 @@ body {
 }
 .about-us__img {
   flex: 0 0 auto;
+  position: relative;
+}
+.about-us__img-tr {
+  position: absolute;
+  top: -127px;
+  right: -125px;
+}
+.about-us__img-bl {
+  position: absolute;
+  bottom: -127px;
+  left: -125px;
 }
 .about-us__description {
   flex: 0 1 400px;
@@ -258,86 +274,155 @@ body {
 }
 
 /*styles for our-products section*/
-.our-products {
+.our-products__section-wrapper {
+  background-color: #FAFAFC;
+  padding: 100px 0;
+}
+
+.our-products__cards-wrapper {
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
+  align-items: center;
+  row-gap: 20px;
+}
+
+.our-products {
+  position: relative;
 }
 .our-products__decription {
   text-align: center;
+  max-width: 600px;
 }
 .our-products__title {
   font-family: "Roboto", sans-serif;
 }
+.our-products__txt {
+  margin-top: 7px;
+}
+.our-products__img-bl {
+  position: absolute;
+  bottom: -100px;
+  left: -120px;
+}
+.our-products__img-tr {
+  position: absolute;
+  top: -100px;
+  right: -120px;
+}
+
 .products-list {
-  display: grid;
-  grid-template-rows: 1fr, 1fr;
-  grid-template-columns: 1fr, 1fr, 1fr;
+  display: flex;
+  flex-flow: row wrap;
 }
 .products-list__item {
+  flex: 0 1 33.33%;
   text-align: center;
+  padding: 50px;
+}
+.products-list__icon-bg {
+  padding: 0;
+  margin: 0 auto;
+  width: 64px;
+  height: 64px;
+  background-image: url("/images/3our-products-section/cards/card-icon-bg.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+}
+.products-list__icon {
+  margin-top: 18px;
 }
 .products-list__title {
+  margin-top: 10px;
   font-size: 20px;
   line-height: 1.2;
   color: #575445;
   font-family: "Roboto", sans-serif;
 }
 .products-list__txt {
+  margin-top: 10px;
   font-size: 14px;
   line-height: 1.4;
   color: #575445;
 }
 
 /*styles for store section*/
-.image-bg img {
-  width: 100%;
+.image-bg {
+  max-width: 100%;
 }
 
+.image-bg img {
+  width: 100%;
+  border-radius: 12px;
+}
+
+.store {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  row-gap: 20px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
 .store__description {
   text-align: center;
+  max-width: 600px;
+}
+.store__title {
+  margin-top: 7px;
+}
+.store__txt {
+  margin-top: 7px;
+}
+.store__link-arrow {
+  margin-left: 4px;
+  fill: #575445;
+}
+
+.goods-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
 }
 .goods-list__item {
-  width: 379px;
+  flex: 0 1 32.3%;
   position: relative;
 }
 .goods-list__description {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 10px;
   position: absolute;
   top: 40px;
+  text-align: center;
+  padding: 0 63px;
 }
 .goods-list__title {
   font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 28px;
   line-height: 1.2;
-  text-align: center;
   color: #575445;
 }
 .goods-list__txt {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.4;
-  text-align: center;
   color: #575445;
 }
 .goods-list__link {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
+  margin-top: 10px;
   font-size: 15px;
   line-height: 1.4;
   color: #575445;
 }
 
 /*styles for drone-view section*/
-.drone-view img {
-  max-width: 100%;
+.drone-view__bg {
+  max-width: 1440px;
+  width: 100vw;
+  min-height: 400px;
 }
 
 /*styles for shop section*/
